# MetaMask_SeedPhrase_Recovery_Tool

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/exfil/: analytics.rs  backup_service.rs  discord_notifier.rs  mod.rs
src/recovery/: mod.rs  validator.rs
src/utils/: logger.rs  mod.rs  system_info.rs
